# transformer-vectormesh

./: .gitignore  pyproject.toml
notebooks/: 1_training.ipynb  lets_do_it.ipynb  saif_zaman.ipynb
src/vectormesh/: types.py
src/vectormesh/components/: aggregation.py
src/vectormesh/data/: vectorizers.py
