[project]
name = "vectormesh"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "datasets>=4.4.2",
    "fastmcp>=2.14.2",
    "jaxtyping>=0.3.4",
    "loguru>=0.7.3",
    "mltrainer>=0.2.7.1",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "protobuf>=6.33.3",
    "pydantic>=2.12.5",
    "pyvis>=0.3.2",
    "sentence-transformers>=2.0.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.scripts]
vectormesh = "vectormesh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebooktester>=0.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
    "vcrpy>=8.1.0",
]

[tool.pytest.ini_options]
# Markers for organizing tests
markers = [
    "integration: marks tests as integration tests (slow, requires real models)",
]

# Default pytest options
addopts = [
    "-v",                           # Verbose output
    "--strict-markers",             # Raise error on unknown markers
    "--tb=short",                   # Shorter traceback format
    "--cov=src/vectormesh",         # Coverage for source code
    "--cov-report=term-missing",    # Show missing lines in terminal
    "--cov-report=html",            # Generate HTML coverage report
    "--cov-branch",                 # Include branch coverage
]

# Coverage settings
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff.lint]
# Ignore jaxtyping annotation syntax errors (F722) and literal string undefined names (F821 for Literal strings)
extend-ignore = ["F722", "F821"]
